--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="main">
       <div class="logo">
         <!-- <a href="#Home" onclick="activesection(1)"><img src="D:\JJ Official\JJ advertising\logo-white.png" width="10" height="10"></a> -->
-        <img id="nav-logo" src="./images/logo-white.png">
+        <img id="nav-logo" src="./gif logo/LOGO-ANI-2-full-white.gif">
         <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 650 1440 1420">
           <path fill="#000000" fill-opacity="1" d="M0,32L80,69.3C160,107,320,181,480,224C640,267,800,277,960,245.3C1120,213,1280,139,1360,101.3L1440,64L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path></svg> -->
       </div>
